File Browser shows negative sizes for large files #45216

Closed
opened 2015-06-27 23:11:05 +02:00 by Jacques Lucke · 6 comments
Member

System Information
Windows 7 64 bit, Nvidia Quadro 600

Blender Version
Broken: 2.75.1 ddeb8c5

Short description of error
file size bug.PNG

Exact steps for others to reproduce the error
Show a large file in the file browser.

  • 1210195705 = original file size - 2^33
**System Information** Windows 7 64 bit, Nvidia Quadro 600 **Blender Version** Broken: 2.75.1 ddeb8c5 **Short description of error** ![file size bug.PNG](https://archive.blender.org/developer/F197982/file_size_bug.PNG) **Exact steps for others to reproduce the error** Show a large file in the file browser. - 1210195705 = original file size - 2^33
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Bastien Montagne self-assigned this 2015-06-27 23:36:35 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

I guess off_t is not always 64bits, even on big guys like win64 :/

Anyway, will just partially backport work from asset-experiments here (using double and adding tera-bytes unit) for now...

I guess off_t is not always 64bits, even on big guys like win64 :/ Anyway, will just partially backport work from asset-experiments here (using double and adding tera-bytes unit) for now...

This issue was referenced by aac5485fca

This issue was referenced by aac5485fcac6736f6ded186ed8d2ec8743d08de0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45216
No description provided.