Fix T45216: File Browser shows negative sizes for large files.

Simply backport small part of work from asset-experiments here (using double and
adding tera-bytes unit), looks like off_t is not always 64bits even on a 64bit OS...